# bx

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  LICENSE.txt  README.md
.github/workflows/: build_cmake.yml
backends/: CMakeLists.txt
cmake/: FileEmbed.cmake  FindSteamworks.cmake
debug/: bx_math.natvis  bx_stl.natvis
demo/: CMakeLists.txt
demo/editor/: imgui.ini
demo/game/: CMakeLists.txt
demo/game/include/: game.hpp
demo/game/include/components/: sprite.hpp
demo/game/include/editor/: level.hpp  level_view.hpp
demo/game/include/resources/: level.hpp
demo/game/include/systems/: drawer.hpp
demo/game/src/: game.cpp
demo/game/src/components/: sprite.cpp
demo/game/src/editor/: level.cpp  level_view.cpp
demo/game/src/resources/: level.cpp
demo/game/src/systems/: drawer.cpp
demo/settings/: .ini
examples/: CMakeLists.txt
examples/basic/: main.cpp
include/: bx.hpp
include/bx/: bx.hpp
include/bx_app/: bx_app.hpp
include/bx_core/: bx_core.hpp
include/bx_math/: bx_math.hpp
include/bx_stl/: array.hpp  fixed_array.hpp  handle_map.hpp  hash_map.hpp  string.hpp  string_view.hpp
include/bxl/: bxl.hpp
include/editor/: application.hpp  assets.hpp  console.hpp  editor.hpp  editor_application.hpp  imgui_ex.hpp  inspector.hpp  profiler.hpp  profiler_view.hpp  settings.hpp
include/engine/: api.hpp  application.hpp  array.hpp  asset.hpp  audio.hpp  byte_types.hpp  debug.hpp  ecs.hpp  engine.hpp  enum.hpp  event.hpp  file.hpp  gameobject.hpp  graphics.hpp  guard.hpp  handle_map.hpp  hash.hpp  hash_map.hpp  (+27 more)
resources/: bx.rc
src/: CMakeLists.txt  bxl.cpp  bxl.hpp  bxl_app.cpp  bxl_app.hpp  bxl_app_glfw.cpp  bxl_device_glfw.cpp  bxl_dvc_glfw.cpp  bxl_gfx_gl.cpp  bxl_gfx_mtl.cpp  bxl_gfx_null.cpp  bxl_gfx_vk.cpp  bxl_internal.hpp
src/bx/core/: application.cpp  file.cpp  input.cpp  log.cpp  memory.cpp  module.cpp  object.cpp  plugin.cpp  profiler.cpp  reflect.cpp  resource.cpp  runtime.cpp  serial.cpp  thread.cpp  time.cpp  uuid.cpp
src/bx/core/math/: math.cpp
src/bx/ecs/: ecs.cpp
src/bx/editor/: asset_importer.cpp  assets.cpp  command.cpp  reflect.cpp  selection.cpp  toolbar.cpp  view.cpp
src/bx/editor/core/: asset_importer.cpp
src/bx/editor/views/: assets_view.cpp  console_view.cpp  data_view.cpp  entity_view.cpp  inspector_view.cpp  profiler_view.cpp  scene_view.cpp  script_view.cpp
src/bx/engine/: application.cpp  data.cpp  ecs.cpp  engine.cpp  imgui.cpp  module.cpp  object.cpp  plugin.cpp  resource.cpp  script.cpp
src/bx/engine/core/: byte_types.cpp  data.cpp  file.cpp  math.cpp  shared_library.cpp  stream.cpp  uuid.cpp
src/bx/engine/editor/: assets.cpp  command.cpp  selection.cpp  toolbar.cpp  view.cpp
src/bx/engine/editor/views/: console_view.cpp  data_view.cpp  profiler_view.cpp  script_view.cpp  settings_view.cpp
src/bx/engine/modules/: graphics.cpp  imgui.cpp  script.cpp
src/bx/engine/modules/graphics/: type.cpp  type_validation.cpp
src/bx/engine/modules/graphics/backend/: graphics_opengl.cpp  graphics_vulkan.cpp
src/bx/engine/modules/graphics/backend/opengl/: conversion.cpp  graphics_pipeline.cpp  opengl_api.cpp  shader.cpp  validation.cpp
src/bx/engine/modules/graphics/backend/vulkan/: acceleration_structure.cpp  blas.cpp  buffer.cpp  cmd_list.cpp  cmd_queue.cpp  compute_pipeline.cpp  conversion.cpp  descriptor_pool.cpp  descriptor_set.cpp  descriptor_set_layout.cpp  device.cpp  extensions.cpp  fence.cpp  framebuffer.cpp  graphics_pipeline.cpp  image.cpp  instance.cpp  pfn.cpp  physical_device.cpp  render_pass.cpp  resource_state_tracker.cpp  sampler.cpp  semaphore.cpp  shader.cpp  spirv_compiler.cpp  swapchain.cpp  validation.cpp
src/bx/engine/modules/window/backend/: window_glfw.cpp
src/bx/framework/: gameobject.cpp
src/bx/framework/components/: animator.cpp  camera.cpp
src/bx/framework/resources/: animation.cpp  material.cpp  mesh.cpp  shader.cpp  skeleton.cpp  texture.cpp
src/bx/framework/systems/: renderer.cpp
src/bx/framework/systems/renderer/: _reblur_pass.cpp  anti_firefly_pass.cpp  blas_data_pool.cpp  bloom_pass.cpp  color_correct_pass.cpp  fog_pass.cpp  fsr2_pass.cpp  gbuffer_pass.cpp  id_pass.cpp  material_pool.cpp  nert_pass.cpp  present_pass.cpp  reblur_pass.cpp  reprojection_pass.cpp  restir_di_pass.cpp  sky.cpp  srgb_to_linear_pass.cpp  ssao_pass.cpp  taa_pass.cpp  wfpt_pass.cpp  write_indirect_args_pass.cpp
src/bx/math/: math.cpp  reflect.cpp
src/bx/meta/: any.reflect.cpp  reflect.cpp
src/bx/platform/: audio.cpp  file.cpp  graphics.cpp  imgui.cpp  input.cpp  network.cpp  reflect.cpp  thread.cpp  window.cpp
src/bx/runtime/: editor.cpp  editor_runtime.cpp
src/bx/script/: script.cpp
src/bx_app/: bx_app.cpp  bx_app_impl.hpp  bx_dvc_glfw.cpp  bx_gfx_gl.cpp  bx_gfx_glsl.cpp  bx_gfx_vk.cpp
src/bx_core/: bx_core.cpp
src/bx_type/: bx_type.cpp
src/editor/: assets.cpp  console.cpp  editor.cpp  imgui_ex.cpp  inspector.cpp  profiler.cpp  profiler_view.cpp  settings.cpp
src/editor/glfw/: window_glfw.cpp
src/editor/opengl/: graphics_opengl.cpp  graphics_opengles.cpp
src/editor/portaudio/: audio_portaudio.cpp
src/editor/steam/: online_steam.cpp
src/editor/vulkan/: graphics_vulkan.cpp
src/engine/: application.cpp  asset.cpp  audio.cpp  debug.cpp  ecs.cpp  engine.cpp  file.cpp  gameobject.cpp  graphics.cpp  log.cpp  math.cpp  online.cpp  physics.cpp  profiler.cpp  resource.cpp  scene.cpp  serial.cpp  uuid.cpp  window.cpp
src/engine/common/: common_file.cpp
src/engine/glfw/: window_glfw.cpp
src/engine/opengl/: gl_common.hpp  graphics_opengl.cpp  graphics_opengles.cpp
src/engine/portaudio/: audio_portaudio.cpp
src/engine/steam/: online_steam.cpp
src/engine/wren/: script_wren.cpp
src/framework/: camera.cpp  gameobject.cpp  scene.cpp  world.cpp
src/framework/editor/: code_editor.cpp  node_editor.cpp  world_editor.cpp
tests/: CMakeLists.txt
tests/bx_math/: bx_math_test.cpp
tests/bx_stl/: array_test.cpp
wren/: CMakeLists.txt  audio.wren  core.wren  device.wren  ecs.wren  framework.wren  graphics.wren  math.wren  physics.wren
(+317 files in other folders)
